deploy: de353b5776224f0e287f915d2641b95edc2dd9d9

--- a/course_basics/teachers.html
+++ b/course_basics/teachers.html
@@ -495,7 +495,7 @@ table th:nth-of-type(2) {
 </tr>
 </thead>
 <tbody>
-<tr class="row-even"><td class="text-align:center"><p><img alt="" src="_static/images/Elco.jpg?h=750&amp;w=1260" /></p></td>
+<tr class="row-even"><td class="text-align:center"><p><img alt="" src="course_basics/~/_static/images/Elco.jpg?h=750&amp;w=1260" /></p></td>
 <td class="text-align:left"><p>Elco Koks is an Assistant Professor within the department of Water and Climate Risk group at the Institute for Environmental Studies (IVM) and Honorary Research Fellow at the Oxford Programme for Sustainable Infrastructure Systems (OPSIS) at the University of Oxford, UK. His research combines knowledge from disaster impact modelling, critical infrastructure, network analysis and macroeconomics.</p></td>
 </tr>
 </tbody>
@@ -509,7 +509,7 @@ table th:nth-of-type(2) {
 </tr>
 </thead>
 <tbody>
-<tr class="row-even"><td class="text-align:center"><p><img alt="" src="_static/images/Thales.jpg?h=750&amp;w=1260" /></p></td>
+<tr class="row-even"><td class="text-align:center"><p><img alt="" src="course_basics/~/_static/images/Thales.jpg?h=750&amp;w=1260" /></p></td>
 <td class="text-align:left"><p>Thales A.P. West is an Assistant Professor at the department of Environmental Geography and the Institute for Environmental Studies (IVM) at Vrije Universiteit Amsterdam and Fellow of the Centre for Environment, Energy and Natural Resource Governance (C-EENRG) at the University of Cambridge, UK. His research is focused on the sustainability of coupled human-natural systems and topics like land-use/cover change, resource management, environmental economics, impact evaluation (econometrics), climate governance, and payments for environmental services, e.g., REDD+ schemes.</p></td>
 </tr>
 </tbody>
@@ -523,7 +523,7 @@ table th:nth-of-type(2) {
 </tr>
 </thead>
 <tbody>
-<tr class="row-even"><td class="text-align:center"><p><img alt="" src="_static/images/Marijn.jpg?h=750&amp;w=1260" /></p></td>
+<tr class="row-even"><td class="text-align:center"><p><img alt="" src="course_basics/~/_static/images/Marijn.jpg?h=750&amp;w=1260" /></p></td>
 <td class="text-align:left"><p>Marijn Ton is a PhD candidate in the department of Water and Climate Risk of the Institute for Environmental Studies (IVM) at Vrije Universiteit Amsterdam (VU). She obtained a bachelor’s degree in Economics &amp; Governance at Wageningen University and then continued her studies at VU Amsterdam, where she completed a master’s degree in Econometrics &amp; Operations Research. In her PhD research, she studies coastal migration caused by climate change and sea level rise. She develops a global agent based model to simulate migration flows between 2020-2100 integrating flood projections and human migration decisions.</p></td>
 </tr>
 </tbody>
@@ -537,7 +537,7 @@ table th:nth-of-type(2) {
 </tr>
 </thead>
 <tbody>
-<tr class="row-even"><td class="text-align:center"><p><img alt="" src="_static/images/Rhoda.jpg?h=750&amp;w=1260" /></p></td>
+<tr class="row-even"><td class="text-align:center"><p><img alt="" src="course_basics/~/_static/images/Rhoda.jpg?h=750&amp;w=1260" /></p></td>
 <td class="text-align:left"><p>Rhoda Odongo is a PhD candidate in the department of Water and Climate Risk of the Institute for Environmental Studies (IVM) at Vrije Universiteit Amsterdam. She has a background in Water Resources Engineering from the Katholieke Universiteit Leuven and Biosystems Engineering from the University of Nairobi. She works on data-driven assessment of drought risk to understand existing and possible future interactions between climate, hydrology, land and water use, and management focusing mainly on the drought and subsurface water storage.</p></td>
 </tr>
 </tbody>
