--- a/course_basics/teachers.html
+++ b/course_basics/teachers.html
@@ -495,7 +495,7 @@ table th:nth-of-type(2) {
 </tr>
 </thead>
 <tbody>
-<tr class="row-even"><td class="text-align:center"><p><img alt="" src="course_basics/~/_static/images/Elco.jpg?h=750&amp;w=1260" /></p></td>
+<tr class="row-even"><td class="text-align:center"><p><img src="../_static/images/Elco.jpg" alt="fishy" class="bg-primary" width="150px"></p></td>
 <td class="text-align:left"><p>Elco Koks is an Assistant Professor within the department of Water and Climate Risk group at the Institute for Environmental Studies (IVM) and Honorary Research Fellow at the Oxford Programme for Sustainable Infrastructure Systems (OPSIS) at the University of Oxford, UK. His research combines knowledge from disaster impact modelling, critical infrastructure, network analysis and macroeconomics.</p></td>
 </tr>
 </tbody>
