deploy: 1779b81ec0bcb1c0166cb2b4ffb732f9496afb36

--- a/week3/lecture.html
+++ b/week3/lecture.html
@@ -594,6 +594,7 @@ title="Print to PDF"
 <p class="admonition-title">Learning objectives week 3</p>
 <ul class="simple">
 <li><p>Gain a basic understanding of machine learning and its most important concepts.</p></li>
+<li><p>Understand the difference between supervised and unsupervised learning.</p></li>
 <li><p>Understand and know how you can apply a machine learning model in Python.</p></li>
 <li><p>Know how to validate and interpret your results.</p></li>
 </ul>
