--- a/course_basics/schedule.html
+++ b/course_basics/schedule.html
@@ -491,21 +491,21 @@ title="Print to PDF"
 <tr class="row-even"><td class="text-align:center"><p>1</p></td>
 <td><p></p></td>
 <td><p>Course Introduction</p></td>
-<td><p>Introduction to Python #1</p></td>
-<td><p>Introduction to Python #2</p></td>
+<td><p>Introduction to Python</p></td>
+<td><p>Introduction to Data Analysis</p></td>
 <td><p>Canvas Quiz (pass/fail)</p></td>
 </tr>
 <tr class="row-odd"><td class="text-align:center"><p>2</p></td>
 <td><p>Census data</p></td>
-<td><p>Introduction to Data Analysis</p></td>
+<td><p>Introduction to Random Forests</p></td>
 <td><p>Data Exploration</p></td>
-<td><p>Regression Analysis</p></td>
+<td><p>Random Forest Regression</p></td>
 <td><p></p></td>
 </tr>
 <tr class="row-even"><td class="text-align:center"><p>3</p></td>
 <td><p>Census data</p></td>
-<td><p>Introduction to Machine Learning</p></td>
-<td><p>Random Forests &amp; Neural Networks</p></td>
+<td><p>Introduction to Neural Networks</p></td>
+<td><p>Neural Networks</p></td>
 <td><p>Model Validation</p></td>
 <td><p>Assigment #1 (24%)</p></td>
 </tr>
@@ -517,11 +517,11 @@ title="Print to PDF"
 <td><p>Assigment #3 (12%)</p></td>
 </tr>
 <tr class="row-even"><td class="text-align:center"><p>5</p></td>
-<td><p>Climate &amp; land-use data</p></td>
-<td><p>Exploring the future</p></td>
-<td><p>Climate forecasting</p></td>
-<td><p>Land-use forecasting</p></td>
+<td><p>Open-Source and VGI data</p></td>
+<td><p>Working with OpenStreetMap</p></td>
+<td><p>Flood Risk Assessment</p></td>
 <td><p>Assigment #2 (12%)</p></td>
+<td><p></p></td>
 </tr>
 <tr class="row-odd"><td class="text-align:center"><p>6</p></td>
 <td><p>Social media data</p></td>
