deploy: 2fea77235ef5418c17ea46315020dbd6bada9f50

--- a/course_basics/schedule.html
+++ b/course_basics/schedule.html
@@ -512,28 +512,28 @@ title="Print to PDF"
 <td><p>Introduction to Neural Networks</p></td>
 <td><p>Neural Networks</p></td>
 <td><p>Model Validation</p></td>
-<td><p>Assigment #1 (24%)</p></td>
+<td><p>Assignment #1 (24%)</p></td>
 </tr>
 <tr class="row-odd"><td class="text-align:center"><p>4</p></td>
 <td><p>Open-Source and VGI data</p></td>
 <td><p>Big Data in the public domain</p></td>
 <td><p>Working with OpenStreetMap</p></td>
 <td><p>Flood Risk Assessment</p></td>
-<td><p>Assigment #2  (12%)</p></td>
+<td><p>Assignment #2  (12%)</p></td>
 </tr>
 <tr class="row-even"><td class="text-align:center"><p>5</p></td>
 <td><p>Satellite data</p></td>
 <td><p>Earth Observation &amp; Google Earth Engine</p></td>
 <td><p>Land-use classification</p></td>
 <td><p>Drought detection</p></td>
-<td><p>Assigment #3 (12%)</p></td>
+<td><p>Assignment #3 (12%)</p></td>
 </tr>
 <tr class="row-odd"><td class="text-align:center"><p>6</p></td>
 <td><p>Social media data</p></td>
 <td><p>Social Media and Natural Language Processing (NLP)</p></td>
 <td><p>Twitter &amp; NLP</p></td>
 <td><p>Spatial mapping NLP</p></td>
-<td><p>Assigment #4 (12%)</p></td>
+<td><p>Assignment #4 (12%)</p></td>
 </tr>
 <tr class="row-even"><td class="text-align:center"><p>7</p></td>
 <td><p>Panel &amp; spatial data</p></td>
