deploy: 232ea32e0b06c23e4480928ade821350dca4a883

--- a/course_basics/teachers.html
+++ b/course_basics/teachers.html
@@ -546,6 +546,20 @@ table th:nth-of-type(2) {
 </tr>
 </tbody>
 </table>
+<p> 
+ </p>
+<table class="colwidths-auto table">
+<thead>
+<tr class="row-odd"><th class="text-align:center head"><p>Maria Fonseca, MSc</p></th>
+<th class="text-align:left head"><p></p></th>
+</tr>
+</thead>
+<tbody>
+<tr class="row-even"><td class="text-align:center"><p><a class="bg-primary reference internal" href="../_images/Maria.jpg"><img alt="../_images/Maria.jpg" class="bg-primary" src="../_images/Maria.jpg" style="width: 150px;" /></a></p></td>
+<td class="text-align:left"><p>Maria Fonseca is a PhD candidate in the department of Water and Climate Risk of the Institute for Environmental Studies (IVM) at Vrije Universiteit Amsterdam (VU). She obtained a bachelor’s degree in Civil Engineering at Western Institute of Technology and Higher Education in Mexico, and a master’s degree in Water Management at TU Delft. In her PhD research, she assesses climate risk of current and future wind and hail storm events, how the affects urban areas, communities and investments, and the available adaptation options to reduce the risks.</p></td>
+</tr>
+</tbody>
+</table>
 </section>
 
     <script type="text/x-thebe-config">
