deploy: bdc45bd0115d99037e2106a0ecfc214357137d31

--- a/course_basics/schedule.html
+++ b/course_basics/schedule.html
@@ -489,7 +489,7 @@ title="Print to PDF"
 <th class="head"><p>Lecture</p></th>
 <th class="head"><p>Tutorial #1</p></th>
 <th class="head"><p>Tutorial #2</p></th>
-<th class="head"><p>Assignment</p></th>
+<th class="head"><p>Grading</p></th>
 </tr>
 </thead>
 <tbody>
@@ -498,49 +498,49 @@ title="Print to PDF"
 <td><p>Course Introduction</p></td>
 <td><p>Introduction to Python</p></td>
 <td><p>Introduction to Data Analysis</p></td>
-<td><p>Canvas Quiz (pass/fail)</p></td>
+<td><p>pass/fail</p></td>
 </tr>
 <tr class="row-odd"><td class="text-align:center"><p>2</p></td>
 <td><p>Census data</p></td>
 <td><p>Introduction to Random Forests</p></td>
 <td><p>Data Exploration</p></td>
-<td><p>Random Forest Regression</p></td>
-<td><p></p></td>
+<td><p>Regression &amp; Random Forests</p></td>
+<td><p>12% of grade</p></td>
 </tr>
 <tr class="row-even"><td class="text-align:center"><p>3</p></td>
 <td><p>Census data</p></td>
 <td><p>Introduction to Neural Networks</p></td>
 <td><p>Neural Networks</p></td>
 <td><p>Model Validation</p></td>
-<td><p>Assignment #1 (24%)</p></td>
+<td><p>12% of grade</p></td>
 </tr>
 <tr class="row-odd"><td class="text-align:center"><p>4</p></td>
 <td><p>Open-Source and VGI data</p></td>
 <td><p>Big Data in the public domain</p></td>
 <td><p>Working with OpenStreetMap</p></td>
 <td><p>Flood Risk Assessment</p></td>
-<td><p>Assignment #2  (12%)</p></td>
+<td><p>12% of grade</p></td>
 </tr>
 <tr class="row-even"><td class="text-align:center"><p>5</p></td>
 <td><p>Satellite data</p></td>
 <td><p>Earth Observation &amp; Google Earth Engine</p></td>
 <td><p>Land-use classification</p></td>
 <td><p>Drought detection</p></td>
-<td><p>Assignment #3 (12%)</p></td>
+<td><p>12% of grade</p></td>
 </tr>
 <tr class="row-odd"><td class="text-align:center"><p>6</p></td>
 <td><p>Social media data</p></td>
 <td><p>Social Media and Natural Language Processing (NLP)</p></td>
 <td><p>Twitter &amp; NLP</p></td>
 <td><p>Spatial mapping NLP</p></td>
-<td><p>Assignment #4 (12%)</p></td>
+<td><p>12% of grade</p></td>
 </tr>
 <tr class="row-even"><td class="text-align:center"><p>7</p></td>
 <td><p>Panel &amp; spatial data</p></td>
 <td><p>How to: visualisation</p></td>
 <td><p>Visualising your results</p></td>
 <td><p></p></td>
-<td><p>Canvas Quiz (bonus)</p></td>
+<td><p>pass/fail</p></td>
 </tr>
 <tr class="row-odd"><td class="text-align:center"><p>8</p></td>
 <td><p></p></td>
