deploy: ac3b41fb3784fb47048bf8425883a853f110eb00

--- a/course_basics/schedule.html
+++ b/course_basics/schedule.html
@@ -518,7 +518,7 @@ title="Print to PDF"
 <td><p>Open-Source and VGI data</p></td>
 <td><p>Big Data in the public domain</p></td>
 <td><p>Working with OpenStreetMap</p></td>
-<td><p>Flood Risk Assessment</p></td>
+<td><p>Natural Hazard Risk Assessment</p></td>
 <td><p>12% of grade</p></td>
 </tr>
 <tr class="row-even"><td class="text-align:center"><p>5</p></td>
@@ -532,7 +532,7 @@ title="Print to PDF"
 <td><p>Social media data</p></td>
 <td><p>Social Media and Natural Language Processing (NLP)</p></td>
 <td><p>Twitter &amp; NLP</p></td>
-<td><p>Spatial mapping NLP</p></td>
+<td><p>Social Media &amp; Land aesthetics</p></td>
 <td><p>12% of grade</p></td>
 </tr>
 <tr class="row-even"><td class="text-align:center"><p>7</p></td>
