deploy: bfcc1ea5448ba6170fc7a9091a68fcecc41068b2

--- a/week6/tutorial2.html
+++ b/week6/tutorial2.html
@@ -1137,7 +1137,7 @@ dtype: object
 </div>
 </div>
 <div class="cell_output docutils container">
-<img alt="../_images/tutorial2_39_0.png" src="../_images/tutorial2_39_0.png" />
+<img alt="../_images/tutorial2_39_01.png" src="../_images/tutorial2_39_01.png" />
 </div>
 </div>
 <p>Let’s have a look how all these photos are tagged. And whether we can actually do something with this information.</p>
