--- a/course_basics/schedule.html
+++ b/course_basics/schedule.html
@@ -503,8 +503,8 @@ title="Print to PDF"
 <tr class="row-odd"><td class="text-align:center"><p>2</p></td>
 <td><p>Census data</p></td>
 <td><p>Introduction to Random Forests</p></td>
-<td><p>Data Exploration</p></td>
-<td><p>Regression &amp; Random Forests</p></td>
+<td><p>Data Exploration &amp; Regression</p></td>
+<td><p>Random Forests</p></td>
 <td><p>12% of grade</p></td>
 </tr>
 <tr class="row-even"><td class="text-align:center"><p>3</p></td>
@@ -531,14 +531,14 @@ title="Print to PDF"
 <tr class="row-odd"><td class="text-align:center"><p>6</p></td>
 <td><p>Social media data</p></td>
 <td><p>Social Media and Natural Language Processing (NLP)</p></td>
-<td><p>Twitter &amp; NLP</p></td>
-<td><p>Social Media &amp; Land aesthetics</p></td>
+<td><p>Social Media &amp; Natural Hazards</p></td>
+<td><p>Social Media &amp; Valuation of Landscapes</p></td>
 <td><p>12% of grade</p></td>
 </tr>
 <tr class="row-even"><td class="text-align:center"><p>7</p></td>
 <td><p>Panel &amp; spatial data</p></td>
 <td><p>How to: visualisation</p></td>
-<td><p>Visualising your results</p></td>
+<td><p>Visualizing data</p></td>
 <td><p></p></td>
 <td><p>pass/fail</p></td>
 </tr>
