--- a/week6/tutorial2.html
+++ b/week6/tutorial2.html
@@ -1861,7 +1861,7 @@ Name: owner, dtype: int64
 </div>
 </div>
 <div class="cell_output docutils container">
-<img alt="../_images/tutorial2_66_01.png" src="../_images/tutorial2_66_01.png" />
+<img alt="../_images/tutorial2_66_0.png" src="../_images/tutorial2_66_0.png" />
 </div>
 </div>
 </section>
