deploy: 587836c4be39638f1f9af951be117a7ee254b7f3

--- a/course_basics/teachers.html
+++ b/course_basics/teachers.html
@@ -569,7 +569,7 @@ table th:nth-of-type(2) {
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./course_basics"
         },
         predefinedOutput: true
