--- a/week1/tutorial1.html
+++ b/week1/tutorial1.html
@@ -2219,7 +2219,7 @@ Make sure that you save this file before you continue, else you will lose everyt
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./week1"
         },
         predefinedOutput: true
