--- a/week1/tutorial3.html
+++ b/week1/tutorial3.html
@@ -1706,7 +1706,7 @@ The Pandas team recommends <strong>Method 2 (re-assign)</strong>, for a <a class
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./week1"
         },
         predefinedOutput: true
