--- a/week4/tutorial1.html
+++ b/week4/tutorial1.html
@@ -1306,7 +1306,7 @@ title="Print to PDF"
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./week4"
         },
         predefinedOutput: true
