--- a/week5/lecture.html
+++ b/week5/lecture.html
@@ -720,7 +720,7 @@ K-nearest neighbor, also known as the KNN algorithm, is a non-parametric algorit
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./week5"
         },
         predefinedOutput: true
