--- a/week6/lecture.html
+++ b/week6/lecture.html
@@ -688,7 +688,7 @@ Text segmentation in natural language processing is the process of transforming 
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./week6"
         },
         predefinedOutput: true
