--- a/week6/tutorial1.html
+++ b/week6/tutorial1.html
@@ -1614,7 +1614,7 @@ The database contains tweets about floods located in Texas from 30/07/2014 to 15
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./week6"
         },
         predefinedOutput: true
