--- a/week6/tutorial2.html
+++ b/week6/tutorial2.html
@@ -1300,7 +1300,7 @@ Now we have extracted the data and, let's explore (and clean) this data a bit mo
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./week6"
         },
         predefinedOutput: true
