--- a/week7/tutorial1.html
+++ b/week7/tutorial1.html
@@ -1261,7 +1261,7 @@ if (outputEl) {{
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./week7"
         },
         predefinedOutput: true
