--- a/week1/lecture.html
+++ b/week1/lecture.html
@@ -762,7 +762,7 @@ title="Print to PDF"
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./week1"
         },
         predefinedOutput: true
