--- a/week2/lecture.html
+++ b/week2/lecture.html
@@ -717,7 +717,7 @@ title="Print to PDF"
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./week2"
         },
         predefinedOutput: true
