--- a/week5/tutorial1.html
+++ b/week5/tutorial1.html
@@ -1485,7 +1485,7 @@ Make sure that you save this file before you continue, else you will lose everyt
             mode: "python"
         },
         kernelOptions: {
-            kernelName: "python3",
+            name: "python3",
             path: "./week5"
         },
         predefinedOutput: true
