--- a/week4/tutorial2.html
+++ b/week4/tutorial2.html
@@ -1234,7 +1234,7 @@ title="Print to PDF"
 <li><p>carefully read the documentation of the <code class="docutils literal notranslate"><span class="pre">.clip_box()</span></code> function of rioxarray. Which information do you need?</p></li>
 <li><p>is the GeoDataFrame of your region (the area GeoDataframe) in the same coordinate system? Perhaps you need to convert it using the <code class="docutils literal notranslate"><span class="pre">.to_crs()</span></code> function.</p></li>
 <li><p>how do you get the bounds from your area GeoDataFrame?</p></li>
-<li><p>The final step of the clip would be to use the <code class="docutils literal notranslate"><span class="pre">.rio.clip()</span></code> function, using the actual area file and the flood map clipped to the bounding box. Please not that you should <strong>not</strong> use the envelope here, like we did in the previous clip. Here we really want to use the exact geometry values.</p></li>
+<li><p>The final step of the clip would be to use the <code class="docutils literal notranslate"><span class="pre">.rio.clip()</span></code> function, using the actual area file and the flood map clipped to the bounding box. Please note that you should <strong>not</strong> use the envelope here, like we did in the previous clip. Here we really want to use the exact geometry values.</p></li>
 </ul>
 <p>As you will see, we first clip it very efficiently using the bounding box. After that, we do an exact clip.</p>
 <div class="cell docutils container">
