deploy: 80427859e377278f8df29f719ff6a380e0c86e70

--- a/week4/tutorial1.html
+++ b/week4/tutorial1.html
@@ -641,7 +641,7 @@ Make sure that you save this file before you continue, else you will lose everyt
 <ul class="simple">
 <li><p>Through the <code class="docutils literal notranslate"><span class="pre">region</span></code>argument we specify the geographic boundary of our training dataset.</p></li>
 <li><p>Through the <code class="docutils literal notranslate"><span class="pre">scale</span></code> argument we specify the size of the points for our sample (30 would indicate 30m).</p></li>
-<li><p>Through the <code class="docutils literal notranslate"><span class="pre">numPixels</span></code> argument we specify how many pixels we want to extract.</p></li>
+<li><p>Through the <code class="docutils literal notranslate"><span class="pre">numPixels</span></code> argument we specify how many pixels we want to extract. I suggest to not go above 5000.</p></li>
 <li><p>Through the <code class="docutils literal notranslate"><span class="pre">seed</span></code> argument we specify which random selection order we want. Through using a seed, you can always reproduce your results.</p></li>
 <li><p>Through the <code class="docutils literal notranslate"><span class="pre">geometries</span></code> argument we specify whether we want to extract the geometries as well. This should always be set to True.</p></li>
 </ul>
