--- a/course_basics/teachers.html
+++ b/course_basics/teachers.html
@@ -473,13 +473,13 @@ table th:nth-of-type(2) {
  </p>
 <table class="table">
 <thead>
-<tr class="row-odd"><th class="head text-center"><p>Rhoda Odongo, MSc</p></th>
+<tr class="row-odd"><th class="head text-center"><p>Surender Raj V, M.Tech</p></th>
 <th class="head text-left"><p></p></th>
 </tr>
 </thead>
 <tbody>
-<tr class="row-even"><td class="text-center"><p><a class="bg-primary reference internal" href="../_images/Rhoda.jpg"><img alt="../_images/Rhoda.jpg" class="bg-primary" src="../_images/Rhoda.jpg" style="width: 150px;" /></a></p></td>
-<td class="text-left"><p>Rhoda Odongo is a PhD candidate in the department of Water and Climate Risk of the Institute for Environmental Studies (IVM) at Vrije Universiteit Amsterdam. She has a background in Water Resources Engineering from the Katholieke Universiteit Leuven and Biosystems Engineering from the University of Nairobi. She works on data-driven assessment of drought risk to understand existing and possible future interactions between climate, hydrology, land and water use, and management focusing mainly on the drought and subsurface water storage.</p></td>
+<tr class="row-even"><td class="text-center"><p><a class="bg-primary reference internal" href="_static/images/Surender.jpg"><img alt="_static/images/Surender.jpg" class="bg-primary" src="_static/images/Surender.jpg" style="width: 150px;" /></a></p></td>
+<td class="text-left"><p>Surender Raj is a Ph.D. candidate in the department of Water and Climate Risk of the Institute for Environmental Studies (IVM) at Vrije Universiteit Amsterdam (VU). He completed his bachelor’s degree in Civil engineering from PSG College of Technology, Coimbatore. He did his master’s in Civil Engineering (specialization in Structural Engineering) from the Indian Institute of Technology Gandhinagar. His research interests include infrastructure resilience, vulnerability modeling, and the economic impacts of natural disasters.</p></td>
 </tr>
 </tbody>
 </table>
