deploy: fd191374f2634c1f811b6d32a185cad9bfbc7471

--- a/course_basics/teachers.html
+++ b/course_basics/teachers.html
@@ -478,7 +478,7 @@ table th:nth-of-type(2) {
 </tr>
 </thead>
 <tbody>
-<tr class="row-even"><td class="text-center"><p><a class="bg-primary reference internal" href="_static/images/Surender.jpg"><img alt="_static/images/Surender.jpg" class="bg-primary" src="_static/images/Surender.jpg" style="width: 150px;" /></a></p></td>
+<tr class="row-even"><td class="text-center"><p><a class="bg-primary reference internal" href="../_images/Surender.jpg"><img alt="../_images/Surender.jpg" class="bg-primary" src="../_images/Surender.jpg" style="width: 150px;" /></a></p></td>
 <td class="text-left"><p>Surender Raj is a Ph.D. candidate in the department of Water and Climate Risk of the Institute for Environmental Studies (IVM) at Vrije Universiteit Amsterdam (VU). He completed his bachelor’s degree in Civil engineering from PSG College of Technology, Coimbatore. He did his master’s in Civil Engineering (specialization in Structural Engineering) from the Indian Institute of Technology Gandhinagar. His research interests include infrastructure resilience, vulnerability modeling, and the economic impacts of natural disasters.</p></td>
 </tr>
 </tbody>
